dist: fix some layout problems

--- a/css/predefined.less
+++ b/css/predefined.less
@@ -11,6 +11,8 @@ body {
 }
 
 ul, p {
+  margin: 0;
+  padding: 0;
   -webkit-margin-before: 0;
   -moz-margin-start: 0;
   -webkit-margin-after: 0;
